--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h3>shalini gupta</h3>
-    <p>this iy fiorfvsjknfgovnsdofgns </p>
+    <p>this iy fiorfvsjvnsdofgns </p>
 </body>
 </html>
